--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Lucky Draw Simulator",
-  "name": "Lucky Draw Simulator - Raffle Random Draw Winner",
+  "short_name": "Big C - Lucky",
+  "name": "Big C Lucky - Random the Winner",
   "icons": [
     {
       "src": "favicon.ico",
